data/all_generated_tests/raw_wast_tests/br_table_IncorrectBranchTargetResolution_2048.wast
;; 8. **Large Label Vector with Valid and Invalid Targets:**    Use a large vector of labels mixing valid and out-of-bounds indices.    - **Test Constraint:** Ensure proper indexing and default label resolution.    - **Expected Differential:** WebAssembly should resolve targets correctly or trap for out-of-bounds, wizard_engine might inadequately resolve targets.

(assert_invalid
 (module (func
   (block
     (block
       (br_table 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 (i32.const 51))
     )
   )
 ))
 "unknown label"
)